--- a/style-Karim.css
+++ b/style-Karim.css
@@ -1,208 +1,252 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
-body{
-    background-color: #dbdbdb;
+body {
+  background-color: #dbdbdb;
 }
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
+  color: white;
 }
-.wholeNav{
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    align-content: flex-start;
-    height: 100px;
+.wholeNav {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  height: 100px;
 }
-.upperNav{
-    width: 100%;
-    background-color: #131921;
-    height: 60%;
-    display: flex;
-    justify-content: flex-start;
-    align-items:center;
-    color: white;
-    padding: 10px 20px;
+.upperNav {
+  width: 100%;
+  background-color: #131921;
+  height: 60%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  color: white;
+  padding: 10px 20px;
 }
-.lowerNav{
-    background-color: #232f3e;
-    height: 40%;
-    width: 100%;
-  
+.lowerNav {
+  background-color: #232f3e;
+  height: 40%;
+  width: 100%;
 }
- .logo{
-    display: flex;
-    justify-content: center;
-    padding: 5px;
+.logo {
+  display: flex;
+  justify-content: center;
+  padding: 5px;
 }
 
-.eg{
-    font-size: 15px;
-color: white;
-margin-left: -53px;
-
-} 
-#logo{
-width: 150px;
-height: 100%;
+.eg {
+  font-size: 15px;
+  color: white;
+  margin-left: -53px;
 }
-a:hover{
-    cursor: pointer;
-    border-style: solid solid  solid  solid;
-    border-color:white ;
-    border-width:1px;
-
+#logo {
+  width: 150px;
+  height: 100%;
 }
-.deliver{
-    display: flex;
-    justify-content: space-between;
-    padding: 10px;
-    font-size: 14px;
+a:hover {
+  cursor: pointer;
+  border-style: solid solid solid solid;
+  border-color: white;
+  border-width: 1px;
 }
-.deliver:hover{
-    cursor: pointer;
-    border-style: solid solid  solid  solid;
-    border-color:white ;
-    border-width:1px;
+.deliver {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  font-size: 14px;
+  margin-left: 20px;
 }
-.opacity{
-    opacity: 0.5;
+.deliver:hover {
+  cursor: pointer;
+  border-style: solid solid solid solid;
+  border-color: white;
+  border-width: 1px;
 }
-.fa-solid{
-    padding-right: 3px;
+.opacity {
+  opacity: 0.5;
 }
-.deliveryPopUP{
-    background:rgb(0, 0, 0,0.6);
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    display: none;
-    justify-content: center;
-    align-items: center;  
+.fa-solid {
+  padding-right: 3px;
 }
-.PopUP-content{
-    width:375px;
-    height: 303px;
-    background-color: white;
+.deliveryPopUP {
+  background: rgb(0, 0, 0, 0.6);
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  justify-content: center;
+  align-items: center;
 }
-#Popup-header{
-    background-color: #f0f2f2;
-    height: 20%;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 15px;
+.PopUP-content {
+  width: 375px;
+  height: 303px;
+  background-color: white;
+}
+#Popup-header {
+  background-color: #f0f2f2;
+  height: 20%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 15px;
 }
 .separator {
-    display: flex;
-    align-items: center;
-    text-align: center;
-    margin: 20px 0;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  margin: 20px 0;
 }
 
 .separator::before,
 .separator::after {
-    content: "";
-    flex: 1;
-    border-bottom: 1px solid #000;
-    margin: 0 10px;
+  content: "";
+  flex: 1;
+  border-bottom: 1px solid #000;
+  margin: 0 10px;
 }
 
 .separator span {
-    white-space: nowrap;
-    font-weight: bold;
-    font-size: 14px;
-    color: #000;
+  white-space: nowrap;
+  font-weight: bold;
+  font-size: 14px;
+  color: #000;
 }
 .dropdown-container {
-    position: relative;
-    width: 100%;
+  position: relative;
+  width: 100%;
 }
 
 #location-input {
-    background-color: #f0f2f2;
+  background-color: #f0f2f2;
 
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    cursor: pointer;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .dropdown-arrow {
-    position: absolute;
-    top: 15px;
-    right: 10px;
-    width: 0;
-    height: 0;
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-    border-top: 5px solid #888;
-    pointer-events: none;
+  position: absolute;
+  top: 15px;
+  right: 10px;
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid #888;
+  pointer-events: none;
 }
 
 .dropdown-menu {
-    display: none;
-    position: absolute;
-    top: 50px;
-    width: 100%;
-    background-color: white;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    z-index: 1;
+  display: none;
+  position: absolute;
+  top: 50px;
+  width: 100%;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 1;
 }
 
 .dropdown-item {
-    padding: 10px;
-    cursor: pointer;
-    transition: background-color 0.2s;
+  padding: 10px;
+  cursor: pointer;
+  transition: background-color 0.2s;
 }
 
 .dropdown-item:hover {
-    background-color: #f0f0f0;
+  background-color: #f0f0f0;
 }
-.pop-rest{
-    padding: 20px;
+.pop-rest {
+  padding: 20px;
 }
-.long{
-    opacity: 0.6;
-    font-size: 15px;
+.long {
+  opacity: 0.6;
+  font-size: 15px;
 }
-.sign-in-pop{
-    margin-top: 10px;
-    padding: 8px;
-    background-color: yellow;
-    width: 100%;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
-    cursor: pointer;
+.sign-in-pop {
+  margin-top: 10px;
+  padding: 8px;
+  background-color: yellow;
+  width: 100%;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  cursor: pointer;
 }
-.done-button{
-    background-color: #ffd700; /* Yellow color */
-    border: none;
-    border-radius: 20px;
-    padding: 10px 20px;
-    font-size: 14px;
-    cursor: pointer;
-    font-weight: bold;
+.done-button {
+  background-color: #ffd700; /* Yellow color */
+  border: none;
+  border-radius: 20px;
+  padding: 10px 20px;
+  font-size: 14px;
+  cursor: pointer;
+  font-weight: bold;
 }
-.popup-footer{
+.popup-footer {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 5px;
+}
+.close {
+  position: relative;
+  left: 360px;
+  top: -120px;
+  cursor: pointer;
+}
+.search {
+  display: flex;
+  width: 50%;
+  height: 100%;
+  margin-left: 20px;
+}
+.search_input {
+  width: 95%;
+  height: 100%;
+}
+.box_icon_search {
+  background-color: yellow;
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 5%;
+}
+.signin {
+  margin-left: 30px;
+  cursor: pointer;
+  padding: 5px;
+}
+.hello {
+  opacity: 0.6;
+  font-size: 13px;
+}
+.orders {
+  margin-left: 30px;
+  padding: 5px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.cart{
+    margin-left: 30px;
+    padding: 5px;
+    height: 100%;
     display: flex;
-    justify-content: flex-end;
-    margin-top: 5px;
+    justify-content: center;
+    align-items: center;
 }
-.close{
-position: relative;
-left: 360px;
-top:-120px;
-cursor: pointer;
-}
+
+
