--- a/style-Karim.css
+++ b/style-Karim.css
@@ -254,7 +254,7 @@ a:hover {
 .lowerNav {
   color: white;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
 }
 .all {
@@ -322,4 +322,57 @@ hr {
   top: 10px;
   color: white;
   cursor: pointer;
+}
+
+.low_nav_ele {
+  color: white;
+  margin-right: 14px;
+  font-size: 15px;
+}
+.lower_nav_left{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.lower_nav_right{
+  height: 100%;
+  display: flex;
+  background-color: #2c3e50;
+  padding: 10px;
+  align-items: center;
+  justify-content: space-between;
+  color: white;
+  font-size: 13px;
+  font-weight: bold;
+  cursor: pointer;
+}
+.lower_nav_right:hover{
+  border: white 1px solid;
+}
+.text {
+  margin-right: 10px;
+}
+
+.highlight {
+  background-color: #f4f4f4;
+  color: black;
+  padding: 5px;
+  margin-right: 0;
+}
+
+.sale {
+  color: orange;
+  padding: 5px;
+  background-color: #f4f4f4;
+
+}
+
+.discount {
+  color: white;
+}
+
+.extended {
+  background-color: #2c3e50;
+  padding: 5px;
+  border-left: 2px solid white;
 }
